--- a/Diplomka/Diplomka.csproj
+++ b/Diplomka/Diplomka.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Translate.cs" />
+    <Compile Include="Models\TranslateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
