new update new bugs

--- a/Diplomka/Diplomka.csproj
+++ b/Diplomka/Diplomka.csproj
@@ -94,7 +94,6 @@
     <Content Include="Content\User\CSS\Registration\Registration.css" />
     <Content Include="Content\User\CSS\Validation.css" />
     <Content Include="Content\Image\image.jpg" />
-    <Content Include="Content\User\Images\image.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -120,7 +119,6 @@
     <Content Include="Views\Home\Translate.cshtml" />
     <Content Include="Views\Home\Grammar.cshtml" />
     <Content Include="Views\User\Registration.cshtml" />
-    <Content Include="Views\Shared\User\_UserLayout.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -132,6 +130,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\JS\" />
+    <Folder Include="Content\User\Images\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
